fixed relevance handling for json; patched demo-snippet.js and using local copy due to ugly z-index problem; fx-inspector working for json now and revamped layout to be a sidepanel; added open feature to display opened or closed initially; internalized styles for fx-inspector;

--- a/resources/demo.css
+++ b/resources/demo.css
@@ -16,6 +16,11 @@ code{
     white-space: nowrap;
     padding:0 0.3rem;
 }
+/*
+demo-snippet .code-container{
+    position:absolute;
+}
+*/
 h1, h2, h3, h4{
     /*color:var(--paper-orange-900);*/
     color:var(--paper-blue-grey-500);
@@ -50,6 +55,7 @@ p{
     max-width: 800px;
     margin:0 auto;
     padding:1rem;
+    position: relative;
 }
 
 .redline{
